--- a/Common/package.json
+++ b/Common/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@anxit/medium-common",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "prepare": "npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@anxit/medium-common": "^1.0.0",
     "typescript": "^5.8.3",
     "zod": "^3.24.4"
   }
